--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ body { background: #757575e7;
     color: black;
     font-family: impact;
     font-size:20px;
+    text-shadow: green 2px 3px 4px;
 }
 
 .zlodeyzagalovok {
     color: darkred;
+    text-shadow: black 2px 1px 1px;
 }
 
 .braznic{
@@ -32,7 +34,8 @@ background: #595757e7;
 }
 
 .felixzagolovok {
-    color: darkred
+    color: darkred;
+    text-shadow: black 2px 1px 1px;
 }
 .felix {
     background: #595757e7;
@@ -58,6 +61,7 @@ font-size:120%;
 .vs {
     font-size:130%;
     color: darkred;
+    text-shadow: black 2px 1px 1px;
 }
 
 .LucaAndAdrien {
@@ -74,6 +78,14 @@ font-size:120%;
     padding-bottom: 10px;
     padding-left: 5px;
     font-size:120%;
+}
+
+.TheEnd {
+ color:black;
+ text-align: center;
+ font-family: impact;
+    font-size:24px;
+    text-shadow:green 2px 3px 4px;
 }
 
 .photo {
