сайт с урока 2,задание 5

--- a/style.css
+++ b/style.css
@@ -80,12 +80,12 @@ font-size:120%;
     font-size:120%;
 }
 
-.TheEnd {
+.ThEend {
  color:black;
  text-align: center;
  font-family: impact;
     font-size:24px;
-    text-shadow:green 2px 3px 4px;
+    text-shadow:green 2px 3px 3px;
 }
 
 .photo {
